fix overflow bug

--- a/app/workouts/[id]/Workout.module.scss
+++ b/app/workouts/[id]/Workout.module.scss
@@ -39,8 +39,8 @@
             padding-inline: 2rem;
             padding-block: 1rem;
             display: flex;
-            flex: 1;
-            justify-content: center;
+            // flex: 1;
+            // justify-content: center;
 
             .exercisePageHeaderInfoContent {
                 .exerciseName {
